# baryonyx

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NEWS  README.ad  README.adoc  README.md  TODO  appveyor.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
app/: CMakeLists.txt
app/src/: benchmark.cpp  main.cpp  main.hpp
benchmarks/: csplib022.csv  download.sh  scp.csv  spp-wcsp2.csv  spp.csv  telebus.csv
cmake/: FindNLOPT.cmake
lib/: CMakeLists.txt  baryonyx.pc.in  lp.pc.in
lib/include/: lpcore  lpcore-compare  lpcore-out  lptest
lib/include/baryonyx/: core  core-compare  core-out  core-test  core-utils
lib/src/: automatic-optimize.cpp  automatic-optimize.hpp  automatic-optimizer.cpp  bit-array.hpp  branch-and-bound-solver.hpp  branch-optimizer.cpp  consistency.cpp  debug.hpp  dynarray.hpp  equalities-01coeff.hpp  exhaustive-solver.hpp  fixed-2darray.hpp  fixed-array.hpp  fixed_2darray.hpp  fixed_array.hpp  generalized-wedelin.hpp  inequalities-01coeff.cpp  inequalities-101coeff.cpp  inequalities-1coeff.cpp  inequalities-1coeff.hpp  inequalities-Zcoeff.cpp  itm-common.hpp  itm-optimizer-common.hpp  itm-solver-common.cpp  itm-solver-common.hpp  itm-solver-equalities-01.cpp  itm-solver-equalities-01.hpp  itm-solver-equalities-101.cpp  itm-solver-equalities-101.hpp  itm-solver-inequalities-01.cpp  itm-solver-inequalities-01.hpp  itm-solver-inequalities-101-buffered.cpp  itm-solver-inequalities-101-buffered.hpp  itm-solver-inequalities-101.cpp  itm-solver-inequalities-101.hpp  itm-solver-inequalities-Z.cpp  itm-solver-inequalities-Z.hpp  itm.cpp  itm.hpp  knapsack-dp-solver.hpp  (+39 more)
lib/test/: 8_queens_puzzle.lp  aim-50-1_6-yes1-2.lp  assignment_problem_1.lp  assignment_problem_3.lp  assignment_problem_4.lp  bound.lp  capmo1_direct.lp  flat30-7.lp  general.lp  geom-30a-3-ext_1000_support.lp  io.cpp  lib.cpp  negative-coeff.lp  negative-coeff2.lp  negative-coeff3.lp  negative-coeff4.lp  optimize.cpp  prepro.lp  preprocess.cpp  prevl1.lp  small4.lp  solve.cpp  sudoku.lp  uf50-0448.lp  unit-test.hpp  verger.lp  verger_5_5.lp  vm.lp
lib/test/n-queens/: n-queens-problem-0.lp  n-queens-problem-1.lp  n-queens-problem-10.lp  n-queens-problem-11.lp  n-queens-problem-12.lp  n-queens-problem-13.lp  n-queens-problem-14.lp  n-queens-problem-15.lp  n-queens-problem-16.lp  n-queens-problem-17.lp  n-queens-problem-18.lp  n-queens-problem-19.lp  n-queens-problem-2.lp  n-queens-problem-21.lp  n-queens-problem-22.lp  n-queens-problem-23.lp  n-queens-problem-24.lp  n-queens-problem-25.lp  n-queens-problem-26.lp  n-queens-problem-27.lp  n-queens-problem-28.lp  n-queens-problem-29.lp  n-queens-problem-3.lp  n-queens-problem-4.lp  n-queens-problem-5.lp  n-queens-problem-6.lp  n-queens-problem-7.lp  n-queens-problem-8.lp  n-queens-problem-9.lp  n-queens-problem.commands  script.sh  solutions.txt
rbaryonyx/: DESCRIPTION  LICENSE  NAMESPACE
rbaryonyx/src/: Makevars  Makevars.win  rbaryonyx.cpp
rbaryonyx/tests/: aim-50-1_6-yes1-2.lp  bibd1n.lp  n-queens-problem-20.lp  optim.R  solve.R
rilp/: DESCRIPTION  LICENSE  NAMESPACE
rilp/src/: Makevars  Makevars.win  rilp.cpp
rilp/tests/: optim.R  solve.R
